<resources>
    <string name="app_name">ScrumMajster</string>
    <string name="main_text">Your Projects</string>
    <string name="project_title_hint">Type project name here...</string>
    <string name="const_start_date">Start Date:</string>
    <string name="const_end_date">End Date:</string>
    <string name="ok_button">OK</string>
    <string name="backlog_text">Backlog</string>
    <string name="sprint_text">Sprints</string>
    <string name="no_active_sprint">There is no active sprint. Tap to create</string>
    <string name="sprint_title_hint">Enter sprint name here...</string>
    <string name="active_tasks">active tasks.</string>
    <string name="empty_sprint">There is no active tasks. Go to Backlog</string>
    <string name="noempty_sprint">Tasks to do:</string>
    <string name="to_do_text">To Do:</string>
    <string name="doing_text">In Progress:</string>
    <string name="done_text">Done:</string>
    <string name="backlog_add_task">ADD TASK</string>
    <string name="const_new_task">Adding task</string>
    <string name="cancel_button">Cancel</string>
    <string name="task_story_hint">Enter user story</string>
    <string name="task_weight_tint">Enter weight</string>
    <string name="task_time_tint">Enter time</string>
    <string-array name="project_dropdown_options">
        <item>Edit project</item>
        <item>Delete project</item>
    </string-array>

    <string-array name="backlog_task_dropdown_options">
        <item>Edit task</item>
        <item>Delete task</item>
        <item>Add to sprint</item>
    </string-array>

    <string-array name="sprint_task_dropdown_options">
        <item>Edit task</item>
        <item>Delete task</item>
        <item>Add to sprint</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team">Team</string>
    <string name="meetings">Meetings</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="burndown">Burndown</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="team_title_hint">Type team name here</string>
    <string name="key_add_hint">Create key</string>
</resources>
